--- a/src/components/Header/HeaderNavigationRoutes/HeaderRoutes.module.scss
+++ b/src/components/Header/HeaderNavigationRoutes/HeaderRoutes.module.scss
@@ -1,9 +1,19 @@
+@import "../../../Layouts/vars";
+
 .Buttons {
 	display: flex;
 	flex-direction: row;
-	margin-top: 10px;
 	width: 60%;
 	justify-content: space-between;
+
+	>li {
+		display: flex;
+		align-items: center;
+
+		@media screen and (max-width: ($break_xs - 1)) {
+			padding: 0 0.75rem;
+		}
+	}
 
 	&__box {
 		display: flex;
@@ -33,6 +43,10 @@
 
 	@media screen and (max-width: 900px) {
 		flex-direction: column;
+	}
+
+	@media screen and (max-width: ($break_xs - 1)) {
+		width: 100%;
 	}
 
 	&__btn {
